# naming-conventions

./: Cargo.toml  README.md  docs.sh
.cargo/: config.toml
.github/workflows/: ci.yml
docs/: crates.js  help.html  search-index.js  settings.html  source-files.js
docs/aho_corasick/: struct.PatternID.html  struct.Span.html
docs/aho_corasick/automaton/: struct.StateID.html
docs/coverage/: index.html
docs/coverage/html/: coverage.json  index.html
docs/coverage/src/: index.html  lib.rs.html  tool.rs.html
docs/implementors/naming_conventions/: trait.Convention.js
docs/naming_conventions/: all.html  enum.CaseName.html  fn.get_convention.html  fn.no_case.html  index.html  sidebar-items.js  trait.Convention.html
docs/naming_conventions/conventions/: fn.is_camel_case.html  fn.is_flat_case.html  fn.is_kebab_case.html  fn.is_macro_case.html  fn.is_no_case.html  fn.is_pascal_case.html  fn.is_snake_case.html  fn.is_train_case.html  fn.to_camel_case.html  fn.to_flat_case.html  fn.to_kebab_case.html  fn.to_macro_case.html  fn.to_no_case.html  fn.to_pascal_case.html  fn.to_snake_case.html  fn.to_train_case.html  index.html  sidebar-items.js
docs/regex/: trait.Replacer.html
docs/regex/bytes/: trait.Replacer.html
docs/regex_automata/: struct.PatternID.html
docs/rust_lib_template/: all.html  fn.add.html  index.html
docs/src/aho_corasick/: ahocorasick.rs.html  automaton.rs.html  dfa.rs.html  (+2 more)
src/: lib.rs  tool.rs
src/conventions/: camel_case.rs  flat_case.rs  kebab_case.rs  macro_case.rs  mod.rs  no_case.rs  pascal_case.rs  snake_case.rs  train_case.rs
(+264 files in other folders)
